tests/NormalTests/paczka1/small_fuzzy/97545030.err
Error in line 1: A515 A32 20,9
Error in line 4: HfIhgPpXxg A52 16,8
Error in line 2: ZUL7L A52 32,9
Error in line 10: A515 A52 -4,6
